--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
             <section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://baay22.github.io/Telco-ICT-Group-8/">https://baay22.github.io/Telco-ICT-Group-8/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Telco+ICT+Group/Telco+ICT+Group-8/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Telco+ICT+Group/Telco+ICT+Group-8/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Telco+ICT+Group/Telco+ICT+Group-8/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Telco+ICT+Group/Telco+ICT+Group-8/index.html</a><br>
+                <a target="_bLank" href="https://tiny-puppy-f4e20d.netlify.app/">https://tiny-puppy-f4e20d.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
